--- a/mk/mk.conf.example
+++ b/mk/mk.conf.example
@@ -1,4 +1,4 @@
-# $NetBSD: mk.conf.example,v 1.182 2001/03/19 14:47:27 dmcmahill Exp $
+# $NetBSD: mk.conf.example,v 1.183 2001/03/19 14:51:38 dmcmahill Exp $
 #
 
 # Sample /etc/mk.conf file, which can be used to set specific values
@@ -371,6 +371,12 @@
 # http://www.irchelp.org/irchelp/networks/servers/efnet.html
 # Default: not defined
 
+#DEFAULT_SERIAL_DEVICE=
+# Used to provide a default setting for the serial device for
+# various packages which communicate over the serial port.
+# Possible:  /dev/your_favorite_serial_device
+# Default: defaults for various machine_archs are set in mk/bsd.prefs.mk
+
 #DT_LAYOUT=
 # Used by dt package to specify the keyboard layout.
 # Possible: US, FI, FR, GER, DV
@@ -671,6 +677,12 @@ PAPERSIZE=	A4
 # for, since it only supports one at a time.
 # Possible: 8, 16, 32
 # Default: 8
+
+#SERIAL_DEVICES=
+# Used to provide a default setting for all the serial devices for
+# various packages which communicate over the serial port.
+# Possible:  /dev/your_favorite_serial_device0 /dev/your_favorite_serial_device1 ...
+# Default: defaults for various machine_archs are set in mk/bsd.prefs.mk
 
 #SQUID_CONFIGURE_ARGS=
 # Used in squid package to set build configuration options.
