--- a/net/gtm/Makefile
+++ b/net/gtm/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.6 2001/03/13 16:33:42 wiz Exp $
+# $NetBSD: Makefile,v 1.7 2001/03/19 17:08:04 tron Exp $
 
-DISTNAME=	gtm-0.4.6
+DISTNAME=	gtm-0.4.7
 CATEGORIES=	net gnome
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=gtm/}
 
