--- a/games/golddig/Makefile
+++ b/games/golddig/Makefile
@@ -1,17 +1,20 @@
-# $NetBSD: Makefile,v 1.4 2001/02/16 15:10:51 wiz Exp $
+# $NetBSD: Makefile,v 1.5 2001/03/19 20:00:06 wiz Exp $
 #
 
-DISTNAME=	golddig2
-PKGNAME=	golddig-2.0
+DISTNAME=	golddigC3.0
+PKGNAME=	golddig-3.0
 CATEGORIES=	games x11
-MASTER_SITES=	ftp://uiarchive.cso.uiuc.edu/pub/systems/linux/sunsite/games/arcade/
+MASTER_SITES=	http://www.netbsd.org/~chuck/gz/
 
-MAINTAINER=	root@garbled.net
+MAINTAINER=	wiz@netbsd.org
 COMMENT=	Fast action game designed for use with X
 
 USE_X11BASE=	yes
 
-post-extract:
-	${RM} ${WRKSRC}/golddig ${WRKSRC}/makelev ${WRKSRC}/*.o
+post-build:
+	for f in ${WRKSRC}/golddig.6 ${WRKSRC}/gdedit.6; do \
+		${SED} "s|@PREFIX@|${PREFIX}|g" $$f > $$f.new && \
+		${MV} $$f.new $$f; \
+	done
 
 .include "../../mk/bsd.pkg.mk"
