--- a/graphics/gnuplot/Makefile
+++ b/graphics/gnuplot/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.11 2001/02/16 15:22:23 wiz Exp $
+# $NetBSD: Makefile,v 1.12 2001/03/19 22:11:14 wennmach Exp $
 #
 
-DISTNAME=	gnuplot-3.7
+DISTNAME=	gnuplot-3.7.1
 CATEGORIES=	graphics x11
 MASTER_SITES=	ftp://ftp.gnuplot.vt.edu/pub/gnuplot/ \
 		ftp://ftp.ucc.ie/pub/gnuplot/
