--- a/x11/kdebase/Makefile
+++ b/x11/kdebase/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.77 2001/02/25 04:18:26 hubertf Exp $
+# $NetBSD: Makefile,v 1.78 2001/03/20 00:20:41 fredb Exp $
 # FreeBSD Id: Makefile,v 1.6 1997/11/27 00:35:27 se Exp
 
 DISTNAME=	kdebase-1.1.2
@@ -22,6 +22,7 @@ DEPENDS+=	libungif-*:../../graphics/libungif
 
 USE_X11BASE=		YES
 USE_MESA=		YES
+USE_RMAN=		YES
 USE_XPM=		YES
 USE_GMAKE=		YES
 USE_LIBTOOL=		YES
@@ -33,7 +34,7 @@ CONFIGURE_ARGS=	"--datadir=${PREFIX}/share/kde" \
 		"--with-qt-dir=${QT1DIR}/qt1"
 CFLAGS+=	-I${LOCALBASE}/include
 CONFIGURE_ENV=	KDEDIR=${PREFIX} \
-		CXXFLAGS="${CFLAGS}" \
+		CXXFLAGS="${CFLAGS} -DRMAN='\"${RMAN}\"'" \
 		all_libraries="-Wl,-R${LOCALBASE}/lib -L${LOCALBASE}/lib -Wl,-R${X11BASE}/lib -L${X11BASE}/lib"
 
 EXTRACT_ONLY=	${DISTNAME}.tar.bz2
