--- a/x11/gdm/Makefile
+++ b/x11/gdm/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.17 2001/02/25 04:18:26 hubertf Exp $
+# $NetBSD: Makefile,v 1.18 2001/03/20 02:42:12 mjl Exp $
 
-DISTNAME=	gdm-2.0beta4
-PKGNAME=	gdm-2.0b4
+DISTNAME=	gdm-2.2.0
 CATEGORIES=	x11 gnome
 MASTER_SITES=	${MASTER_SITE_GNOME:=stable/sources/gdm/} \
 		${MASTER_SITE_LOCAL}
@@ -17,6 +16,7 @@ EXTRACT_ONLY=	${DISTNAME}${EXTRACT_SUFX}
 
 GNU_CONFIGURE=	yes
 USE_X11BASE=	yes
+USE_LIBINTL=    YES
 
 CPPFLAGS=	-I${LOCALBASE}/include
 LIBS=		-lintl
@@ -25,7 +25,8 @@ LOCALSTATEDIR=	/var/gnome
 EVAL_PREFIX+=	KDEBASEDIR=kdebase
 CONFIGURE_ARGS+= --localstatedir=${LOCALSTATEDIR}
 CONFIGURE_ENV+=	CPPFLAGS="${CPPFLAGS}" LIBS="${LIBS}" \
-		LOCALBASE=${LOCALBASE} X11BASE=${X11BASE}
+		LOCALBASE=${LOCALBASE} X11BASE=${X11BASE} \
+		GDMOWN=${GDMOWN} GDMGRP=${GDMGRP}
 
 DEINSTALL_FILE=	${WRKDIR}/DEINSTALL
 INSTALL_FILE=	${WRKDIR}/INSTALL
