--- a/security/uvscan-dat/Makefile
+++ b/security/uvscan-dat/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.12 2001/02/17 17:50:15 wiz Exp $
+# $NetBSD: Makefile,v 1.13 2001/03/20 08:47:13 rh Exp $
 #
 
-DISTNAME=	dat-4120
+DISTNAME=	dat-4129
 PKGNAME=	uvscan-${DISTNAME}
 NO_WRKSUBDIR=	yes
 CATEGORIES=	security
