--- a/lang/Makefile
+++ b/lang/Makefile
@@ -1,10 +1,10 @@
-# $NetBSD: Makefile,v 1.92 2001/02/24 15:48:21 jtb Exp $
+# $NetBSD: Makefile,v 1.93 2001/03/20 11:59:00 wiz Exp $
 #
 
 COMMENT=	Programming languages
 
-SUBDIR+=	STk
 SUBDIR+=	RScheme
+SUBDIR+=	STk
 SUBDIR+=	awka
 SUBDIR+=	baci
 SUBDIR+=	brandybasic
@@ -43,6 +43,7 @@ SUBDIR+=	kali
 SUBDIR+=	libperl
 #SUBDIR+=	libperl-current		# libperl is newer
 SUBDIR+=	librep
+SUBDIR+=	maude
 SUBDIR+=	mawk
 SUBDIR+=	minischeme
 SUBDIR+=	moscow_ml
