--- a/net/dante/Makefile
+++ b/net/dante/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.2 2001/02/17 18:18:44 wiz Exp $
+# $NetBSD: Makefile,v 1.3 2001/03/20 12:46:50 rh Exp $
 #
 
-DISTNAME=		dante-1.1.4
+DISTNAME=		dante-1.1.9
 CATEGORIES=		net security
 MASTER_SITES=		ftp://ftp.inet.no/pub/socks/
 
