--- a/x11/gnome/Makefile
+++ b/x11/gnome/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.19 2001/02/22 13:21:46 tron Exp $
+# $NetBSD: Makefile,v 1.20 2001/03/20 13:12:27 tron Exp $
 
-DISTNAME=	gnome-1.2.4
+DISTNAME=	gnome-1.2.4nb1
 CATEGORIES=	x11 gnome
 MASTER_SITES=	# empty
 DISTFILES=	# empty
@@ -11,24 +11,24 @@ COMMENT=	"meta-package" for the GNU Network Object Model Environment
 
 DEPENDS+=	control-center>=1.2.2:../controlcenter
 DEPENDS+=	ee>=0.3.12:../../graphics/ee
-DEPENDS+=	gdm-2.0b4:../gdm
+DEPENDS+=	gdm>=2.2.0:../gdm
 DEPENDS+=	ggv>=0.95:../../print/ggv
-DEPENDS+=	glade>=0.5.3:../../devel/glade
+DEPENDS+=	glade>=0.5.11:../../devel/glade
 DEPENDS+=	gmc>=4.5.42:../../sysutils/gmc
 DEPENDS+=	gnome-applets>=1.2.1:../gnome-applets
 DEPENDS+=	gnome-audio>=1.0.0:../../audio/gnome-audio
 DEPENDS+=	gnome-chess>=0.2.4:../../games/gnome-chess
-DEPENDS+=	gnome-games>=1.0.51:../../games/gnome-games
-DEPENDS+=	gnome-media>=1.0.51:../../audio/gnome-media
-DEPENDS+=	gnome-pim>=1.0.55:../../misc/gnome-pim
-DEPENDS+=	gnome-python>=1.0.51:../gnome-python
+DEPENDS+=	gnome-games>=1.2.0:../../games/gnome-games
+DEPENDS+=	gnome-media>=1.2.0:../../audio/gnome-media
+DEPENDS+=	gnome-pim>=1.2.0:../../misc/gnome-pim
+DEPENDS+=	gnome-python>=1.0.53:../gnome-python
 DEPENDS+=	gnome-users-guide>=1.2:../gnome-users-guide
-DEPENDS+=	gnome-utils>=1.0.51:../../misc/gnome-utils
-DEPENDS+=	gnumeric>=0.59:../../math/gnumeric
-DEPENDS+=	gtk-->=1.0.3:../gtk--
-DEPENDS+=	gtk-engines>=0.8:../gtk-engines
+DEPENDS+=	gnome-utils>=1.2.0:../../misc/gnome-utils
+DEPENDS+=	gnumeric>=0.64:../../math/gnumeric
+DEPENDS+=	gtk-->=1.2.0:../gtk--
+DEPENDS+=	gtk-engines>=0.10:../gtk-engines
 DEPENDS+=	gtop>=1.0.9:../../sysutils/gtop
-DEPENDS+=	xchat>=1.5.6:../../chat/xchat
+DEPENDS+=	xchat>=1.6.2:../../chat/xchat
 
 USE_X11=	yes
 EXTRACT_ONLY=	# empty
