--- a/net/Makefile
+++ b/net/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.204 2001/03/14 16:42:12 skrll Exp $
+# $NetBSD: Makefile,v 1.205 2001/03/20 14:19:12 wiz Exp $
 #
 
 COMMENT=	Networking tools
@@ -92,6 +92,7 @@ SUBDIR+=	openh323
 SUBDIR+=	ORBit
 SUBDIR+=	p5-ispman
 SUBDIR+=	p5-Net
+SUBDIR+=	p5-Net-Daemon
 SUBDIR+=	p5-Net-DNS
 SUBDIR+=	p5-Net-IRC
 SUBDIR+=	p5-Net-SNMP
