--- a/devel/p5-Storable/Makefile
+++ b/devel/p5-Storable/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.1.1.1 2001/02/20 08:54:34 jtb Exp $
+# $NetBSD: Makefile,v 1.2 2001/03/20 15:12:12 wiz Exp $
 
-DISTNAME=	Storable-1.0.7
+DISTNAME=	Storable-1.0.11
 PKGNAME=	p5-${DISTNAME}
 CATEGORIES=	devel perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=Storable/}
