--- a/x11/Makefile
+++ b/x11/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.209 2001/03/16 14:16:43 wiz Exp $
+# $NetBSD: Makefile,v 1.210 2001/03/20 22:30:11 pooka Exp $
 #
 
 COMMENT=	Packages to support the X window system
@@ -111,6 +111,7 @@ SUBDIR+=	xkeycaps
 SUBDIR+=	xless
 SUBDIR+=	xlockmore
 SUBDIR+=	xlogout
+SUBDIR+=	xlupe
 SUBDIR+=	xmascot
 SUBDIR+=	xmeter
 SUBDIR+=	xmindpath
