--- a/sysutils/Makefile
+++ b/sysutils/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.92 2001/03/14 10:39:23 wiz Exp $
+# $NetBSD: Makefile,v 1.93 2001/03/21 14:24:23 ad Exp $
 #
 
 COMMENT=	System utilities
@@ -34,6 +34,7 @@ SUBDIR+=	gnome-vfs
 SUBDIR+=	gpart
 SUBDIR+=	gtop
 SUBDIR+=	hfsutils
+SUBDIR+=	i2ocfg
 SUBDIR+=	kapm
 SUBDIR+=	kdf
 SUBDIR+=	klavg
