--- a/sysutils/i2ocfg/Makefile
+++ b/sysutils/i2ocfg/Makefile
@@ -1,10 +1,11 @@
-# $NetBSD: Makefile,v 1.1.1.1 2001/03/21 14:23:13 ad Exp $
+# $NetBSD: Makefile,v 1.2 2001/03/21 14:26:16 ad Exp $
 
 DISTNAME=		i2ocfg-1.0
 CATEGORIES=		sysutils
 MASTER_SITES=		http://www.netbsd.org/~ad/i2ocfg/
 
 MAINTAINER=		ad@netbsd.org
+HOMEPAGE=		http://www.netbsd.org/~ad/i2ocfg/
 COMMENT=		I2O configuration dialog gateway
 
 ONLY_FOR_PLATFORM=      NetBSD-*-*
