--- a/www/p5-URI/Makefile
+++ b/www/p5-URI/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.7 2001/02/17 17:22:26 wiz Exp $
+# $NetBSD: Makefile,v 1.8 2001/03/21 17:15:33 mjl Exp $
 #
 
-DISTNAME=	URI-1.10
+DISTNAME=	URI-1.11
 PKGNAME=	p5-${DISTNAME}
 CATEGORIES=	www net perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=URI/}
