--- a/databases/p5-SQL-Statement/Makefile
+++ b/databases/p5-SQL-Statement/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.2 2001/02/16 14:17:34 wiz Exp $
+# $NetBSD: Makefile,v 1.3 2001/03/21 17:27:05 mjl Exp $
 #
 
-DISTNAME=	SQL-Statement-0.1016
+DISTNAME=	SQL-Statement-0.1017
 PKGNAME=	p5-${DISTNAME}
 CATEGORIES=	databases perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=SQL/}
