--- a/databases/p5-DBD-CSV/Makefile
+++ b/databases/p5-DBD-CSV/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.3 2001/02/16 14:17:31 wiz Exp $
+# $NetBSD: Makefile,v 1.4 2001/03/21 17:30:28 mjl Exp $
 #
 
-DISTNAME=	DBD-CSV-0.1022
+DISTNAME=	DBD-CSV-0.1025
 PKGNAME=	p5-${DISTNAME}
 CATEGORIES=	databases perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=DBD/}
