--- a/misc/Makefile
+++ b/misc/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.91 2001/03/14 16:41:56 skrll Exp $
+# $NetBSD: Makefile,v 1.92 2001/03/22 13:23:15 skrll Exp $
 #
 
 COMMENT=	Miscellaneous utilities
@@ -37,6 +37,8 @@ SUBDIR+=	ibutton-pdkit
 SUBDIR+=	iselect
 SUBDIR+=	jitterbug
 SUBDIR+=	jive
+SUBDIR+=	kdeadmin2
+SUBDIR+=	kdepim2
 SUBDIR+=	kdeutils
 SUBDIR+=	kdeutils2
 SUBDIR+=	kp
