--- a/benchmarks/hbench/Makefile
+++ b/benchmarks/hbench/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.12 2001/02/16 13:37:50 wiz Exp $
+# $NetBSD: Makefile,v 1.13 2001/03/22 13:27:27 wiz Exp $
 
 DISTNAME=		hbench-OS-1.0
 PKGNAME=		hbench-1.0
@@ -9,7 +9,7 @@ MAINTAINER=		root@garbled.net
 HOMEPAGE=		http://www.eecs.harvard.edu/vino/perf/hbench/
 COMMENT=		Suite of portable benchmarks to measure the OS and the hardware
 
-DEPENDS+=		gnuplot-3.7:../../graphics/gnuplot
+DEPENDS+=		gnuplot>=3.7:../../graphics/gnuplot
 
 OSVERSION_SPECIFIC=	yes
 ALL_TARGET=		build
