--- a/math/octave/Makefile
+++ b/math/octave/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.20 2001/02/25 04:18:01 hubertf Exp $
+# $NetBSD: Makefile,v 1.21 2001/03/22 13:30:58 wiz Exp $
 # FreeBSD Id: Makefile,v 1.18 1998/09/27 20:10:45 steve Exp
 
 DISTNAME=	octave-2.0.16
@@ -15,7 +15,7 @@ COMMENT=	High-level language, primarily intended for numerical computations
 
 BUILD_DEPENDS+=	tex:../../print/teTeX
 BUILD_DEPENDS+=	dvips:../../print/teTeX
-DEPENDS+=	gnuplot-3.7:../../graphics/gnuplot
+DEPENDS+=	gnuplot>=3.7:../../graphics/gnuplot
 
 USE_X11=		yes
 GNU_CONFIGURE=		yes
