--- a/misc/siag/Makefile
+++ b/misc/siag/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.19 2001/02/17 18:09:24 wiz Exp $
+# $NetBSD: Makefile,v 1.20 2001/03/22 13:31:23 wiz Exp $
 
 DISTNAME=       siag-3.1.20
 CATEGORIES=     misc textproc math
@@ -9,7 +9,7 @@ HOMEPAGE=       http://www.edu.stockholm.se/siag/
 COMMENT=	Poor man's office suite with spreadsheet, word processor, etc
 
 DEPENDS+=	gv-3.5.8:../../print/gv
-DEPENDS+=	gnuplot-3.7:../../graphics/gnuplot
+DEPENDS+=	gnuplot>=3.7:../../graphics/gnuplot
 DEPENDS+=	guile>=1.3:../../lang/guile
 
 CONFIGURE_ARGS=	--with-x --with-guile --includedir=${PREFIX}/include
