--- a/x11/xview-lib/Makefile
+++ b/x11/xview-lib/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.13 2001/02/17 17:07:29 wiz Exp $
+# $NetBSD: Makefile,v 1.14 2001/03/22 14:29:34 wiz Exp $
 # $FreeBSD Id: Makefile,v 1.13 1997/07/17 15:13:03 max Exp
 #
 
@@ -16,5 +16,9 @@ NO_SRC_ON_FTP=		Already in MASTER_SITE_LOCAL
 NOT_FOR_PLATFORM=       *-*-alpha       # broken va_arg handling.
 
 USE_IMAKE=		# defined
+
+post-install:
+	cd ${PREFIX}/lib && ${LN} -fs libolgx.so.3.2 libolgx.so.3 && \
+		${LN} -fs libxview.so.3.2 libxview.so.3
 
 .include "../../mk/bsd.pkg.mk"
